@@ -926,14 +926,26 @@ The optional BUFFERS is a list of emacs-w3m buffers."
 	   (menu-action2 `(lambda (e)
 			    (interactive "e")
 			    (w3m-tab-button-menu2 e ,buffer)))
+	   (next-buffer-action `(lambda (e)
+				  (interactive "e")
+				  (w3m-tab-click-mouse-function e ,buffer)
+				  (let ((this-command 'w3m-tab-next-buffer))
+				    (w3m-tab-next-buffer 1 e))))
+	   (previous-buffer-action `(lambda (e)
+				      (interactive "e")
+				      (w3m-tab-click-mouse-function e ,buffer)
+				      (let ((this-command 'w3m-tab-previous-buffer))
+					(w3m-tab-previous-buffer 1 e))))
 	   (move-left-action `(lambda (e)
 				(interactive "e")
 				(w3m-tab-click-mouse-function e ,buffer)
-				(w3m-tab-move-left 1 e)))
+				(let ((this-command 'w3m-tab-move-left))
+				  (w3m-tab-move-left 1 e))))
 	   (move-right-action `(lambda (e)
 				 (interactive "e")
 				 (w3m-tab-click-mouse-function e ,buffer)
-				 (w3m-tab-move-right 1 e))))
+				 (let ((this-command 'w3m-tab-move-right))
+				   (w3m-tab-move-right 1 e)))))
       (define-key w3m-tab-map [header-line down-mouse-1] 'ignore)
       (define-key w3m-tab-map [header-line down-mouse-2] 'ignore)
       (define-key w3m-tab-map [header-line mouse-1] single-action)
@@ -943,10 +955,10 @@ The optional BUFFERS is a list of emacs-w3m buffers."
       (define-key w3m-tab-map [header-line double-mouse-1] double-action1)
       (define-key w3m-tab-map [header-line double-mouse-2] double-action2)
       (define-key w3m-tab-map [header-line mouse-3] menu-action)
-      (define-key w3m-tab-map [header-line wheel-up] 'w3m-tab-previous-buffer)
-      (define-key w3m-tab-map [header-line wheel-down] 'w3m-tab-next-buffer)
-      (define-key w3m-tab-map [header-line mouse-4] 'w3m-tab-previous-buffer)
-      (define-key w3m-tab-map [header-line mouse-5] 'w3m-tab-next-buffer)
+      (define-key w3m-tab-map [header-line wheel-up] previous-buffer-action)
+      (define-key w3m-tab-map [header-line wheel-down] next-buffer-action)
+      (define-key w3m-tab-map [header-line mouse-4] previous-buffer-action)
+      (define-key w3m-tab-map [header-line mouse-5] next-buffer-action)
       (define-key w3m-tab-map [header-line C-wheel-up] move-left-action)
       (define-key w3m-tab-map [header-line C-wheel-down] move-right-action)
       (define-key w3m-tab-map [header-line C-mouse-4] move-left-action)
